--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <h1>Meal Finder</h1>
         <form class="search-form" id="search-form">
-            <input type="search" id="search-meal" placeholder="Enter meal name">
+            <input type="search" id="search-meal" placeholder="Enter meal name (fish, beef, chicken, etc...)">
             <button id="search-button" type="submit">
                 <i class="fa fa-search"></i>
             </button>
